// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfobarWidgets component should call the appropriate callback when clicking remove icon in edit mode 1`] = `
[
  [
    "templatePath",
    Immutable.List [
      "absolute",
      "path",
    ],
  ],
]
`;

exports[`InfobarWidgets component should display (without an edit or a remove icon) 1`] = `
<div>
  <div
    class="draggable widgetWrapper"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--shopifyGreen);"
    >
      <div
        class="anchor"
        id="shopify"
      />
    </div>
  </div>
</div>
`;

exports[`InfobarWidgets component should have the proper color set 1`] = `
<div>
  <div
    class="draggable widgetWrapper widgetWrapperEditing"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 #fff;"
    >
      <div
        class="widgetWrapperTools"
        id="card-wrapper-4"
      >
        <button
          aria-disabled="false"
          class="wrapper ghost primary small"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft small"
            >
              edit
            </i>
            Customize Widget
          </span>
        </button>
        <button
          aria-disabled="false"
          class="wrapper ghost destructive small"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft small"
            >
              delete
            </i>
            Delete Widget
          </span>
        </button>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`InfobarWidgets component should render customer external data widget with the proper id 1`] = `
<div>
  <div
    class="draggable widgetWrapper"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--customerExternalDataGray);"
    >
      <div
        class="anchor"
        id="my_wonderful_app_name"
      />
    </div>
  </div>
</div>
`;

exports[`InfobarWidgets component should render woocommerce widget with the proper id 1`] = `
<div>
  <div
    class="draggable widgetWrapper"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--woocommercePurple);"
    >
      <div
        class="anchor"
        id="woo_commerce"
      />
    </div>
  </div>
</div>
`;
